src/main/java/com/example/parking/error/ReservationNotFound.java
package com.example.parking.error;

public class ReservationNotFound extends Exception {

    public ReservationNotFound() {
        super("Reservation not found");
    }
}
